# Deep-Sector_Terminal

./: .replit  Cargo.toml  savegame.json
attached_assets/: Pasted-warning-method-update-item-price-is-never-used-src-models-market-rs-370-8-102-i-1745188759821.txt  Pasted-warning-unused-import-Skill-src-models-faction-rs-3-29-3-use-crate-models-skills-1745179858823.txt  Pasted-warning-unused-imports-Duration-and-Instant-src-models-player-rs-3-17-3-use-std-ti-1745162875296.txt
src/: game.rs  lib.rs  main.rs
src/debug/: client_server.rs  error_analysis.rs  examples.rs  mod.rs  network.rs
src/models/: account.rs  blueprint.rs  faction.rs  item.rs  market.rs  mod.rs  player.rs  player_market.rs  ship.rs  skills.rs  universe.rs
src/network/: client.rs  error.rs  mod.rs  protocol.rs  server.rs
src/systems/: crafting.rs  economy.rs  mining.rs  mod.rs  navigation.rs  time.rs  trading.rs
src/ui/: app.rs  ascii_art.rs  colors.rs  mod.rs
src/ui/screens/: character_creation.rs  character_info.rs  crafting.rs  help.rs  inventory.rs  main_menu.rs  market.rs  mining.rs  mod.rs  navigation.rs  orders.rs  ship.rs  station_services.rs  style_utils.rs
src/ui/widgets/: menu.rs  mod.rs  starmap.rs  status_bar.rs
src/utils/: mod.rs  save_load.rs  serde.rs
