[package]
name = "space_trader"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A terminal-based space simulation game inspired by EVE Online"

[dependencies]
tui = "0.19.0"
crossterm = "0.25.0"
rand = "0.8.5"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
noise = "0.8.2"
