[package]
name = "space_trader"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A terminal-based space simulation game inspired by EVE Online"

[dependencies]
tui = "0.19.0"
crossterm = "0.25.0"
rand = "0.8.5"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
noise = "0.8.2"
tokio = { version = "1.28.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
futures = "0.3.28"
bytes = "1.4.0"
thiserror = "1.0.40"
dotenv = "0.15.0"
bcrypt = "0.14.0"
bincode = "1.3.3"
lazy_static = "1.4.0"
log = "0.4.17"
hostname = "0.3.1"
num_cpus = "1.15.0"
get_if_addrs = "0.5.3"

# Dependencies for debugging system were already added above

[[bin]]
name = "space_trader"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
